Add basic pagination to get_all_posts
